--- a/public/examples/simple.html
+++ b/public/examples/simple.html
@@ -3,7 +3,7 @@
   <meta charset='utf-8'/>
   <script src='//code.jquery.com/jquery-2.0.0.min.js'></script>
   <script src='//coffeescript.org/extras/coffee-script.js'></script>
-  <script src='//rawgithub.com/chandruxp/jumly/blob/master/public/jumly.min.js'></script>
+  <script src='//rawgit.com/chandruxp/jumly/master/public/jumly.min.js'></script>
 </head>
 <body>
   <script type='text/jumly+sequence'>
