Fix simple example

--- a/public/examples/simple.html
+++ b/public/examples/simple.html
@@ -2,8 +2,8 @@
 <head>
   <meta charset='utf-8'/>
   <script src='//code.jquery.com/jquery-2.0.0.min.js'></script>
-  <script src='//coffeescript.org/extras/coffee-script.js'></script>
-  <script src='http://rawgit.com/chandruxp/jumly/master/public/jumly.min.js'></script>
+  <script src='//rawgit.com/jashkenas/coffeescript/master/extras/coffee-script.js'></script>
+  <script src='/public/jumly.min.js'></script>
 </head>
 <body>
   <script type='text/jumly+sequence'>
