--- a/public/editor.html
+++ b/public/editor.html
@@ -56,6 +56,7 @@
     @message "get", "JUMLY"
   </script>
   -->
+  <a href='view.html'>&lt;- Go back</a>
   <div><input type='text' name='title' id='title' style='width: 44%' tabindex='1' placeholder='Title for the sequence diagram'/></div>
   <div id="jumly-editor" ></div>
   <div id="jumly-diagram"></div>
@@ -64,6 +65,8 @@
     <iframe id='ref' frameborder=0 src='http://jumly.tmtk.net/reference.html' class='hide' height='600' style='width: 900px'></iframe>
   </div>
   <script>
+  
+    
   
     $("#help").click(function(){
       if($('#ref').hasClass('hide')) {
@@ -109,5 +112,19 @@
         error: function(){}
       })
     })
+    
+    $(document).ready(function(){
+      var qs = location.search.substr(1); if(!qs) return;
+      var diagram_id = qs.split('=').pop();
+      $.ajax({
+        url: "./api.php?diagram_id="+diagram_id,
+        type: "GET",
+        success: function(data){
+          $("#hiddenId").val(data[0].diagram_id);
+          $("#title").val(data[0].title);
+          a.setValue(data[0].code);
+        }
+      })
+    });
   </script>
 </body>
